--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "dependencies": {
     "@inertiajs/react": "^1.1.0",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.21.4",
     "postcss": "^8.4.38",
@@ -11,7 +14,8 @@
     "postcss-nesting": "^12.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --jsx=automatic --outdir=app/assets/builds --public-path=/assets",
